refactor: update swagger docs and add redis invalidation in products service
