# internal/controller/products.controller.go
@@ -464,53 +464,3 @@ func (pc *ProductsController) GetAllProductSize(c *gin.Context) {
 
 	response.Success(c, http.StatusOK, "Product Sizes Retrieved Successfully", data)
 }
-
-// Get Product Sizes godoc
-//
-//	@Summary	Get all product
-//	@Tags		Admin Product Management
-//	@Produce	json
-//	@Success	200	{object}	[]dto.Product
-//	@Failure	500	{object}	dto.ResponseError
-//	@Router		/products/product-sizes/ [get]
-// func (pc *ProductsController) GetAllProductByAdmin(c *gin.Context) {
-// 	var req dto.ProductAdminQueries
-
-// 	if err := c.ShouldBindQuery(&req); err != nil {
-// 		response.Error(c, http.StatusBadRequest, "Invalid query parameters")
-// 		return
-// 	}
-
-// 	page := 1
-// 	if req.Page != "" {
-// 		page, _ = strconv.Atoi(req.Page)
-// 		if page < 1 {
-// 			page = 1
-// 		}
-// 	}
-
-// 	data, totalPage, err := pc.productService.GetAllProductByAdmin(c, page)
-// 	if err != nil {
-// 		response.Error(c, http.StatusInternalServerError, http.StatusText(http.StatusInternalServerError))
-// 		return
-// 	}
-
-// 	var nextPage string
-// 	var prevPage string
-
-// 	if page < totalPage {
-// 		nextPage = fmt.Sprintf("/admin/products?page=%d", page+1)
-// 	}
-// 	if page > 1 {
-// 		prevPage = fmt.Sprintf("/admin/products?page=%d", page-1)
-// 	}
-
-// 	response.SuccessWithMeta(c, http.StatusOK, "Products Data Retrieved Successfully", data,
-// 		dto.PaginationMeta{
-// 			Page:      page,
-// 			TotalPage: totalPage,
-// 			NextPage:  nextPage,
-// 			PrevPage:  prevPage,
-// 		},
-// 	)
-// }
